# whatsapp_automation

./: README.md  pyproject.toml  setup.py
prueba-tecnica.2.0/: .gitignore  MANIFEST.in  README.md
prueba-tecnica.2.0/example/: example.py
prueba-tecnica.2.0/whatsapp_automation/: __init__.py
whatsapp_automation/: cli.py  whatsapp_automation.py
