[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsapp-automation"
dynamic = ["version"]
description = "Librería Python para automatizar envío de mensajes en WhatsApp Web"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Alexnader Rivero", email = "jasealexander14@gmail.com"},
]
keywords = ["whatsapp", "automation", "playwright", "messaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.scripts]
whatsapp-send = "whatsapp_automation.cli:main"

[project.urls]
Homepage = "https://github.com/tu-usuario/whatsapp-automation"
Repository = "https://github.com/tu-usuario/whatsapp-automation.git"
Issues = "https://github.com/tu-usuario/whatsapp-automation/issues"

[tool.setuptools_scm]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]